# kile

./: .gitignore  Cargo.toml  README.md  build.rs  kile.nix  note
contrib/: layout
doc/: contrib  kile.1.scd
protocol/: river-layout-v2.xml
protocols/: river-layout-unstable-v1.xml  river-layout-v1.xml
src/: base.rs  basic.rs  build.rs  client.rs  combi.rs  custom.rs  display.rs  engine.rs  frame.rs  layout.rs  main.rs  options.rs  parser.rs
src/cmd/: lexer.rs  mod.rs
src/custom/: :w  combi.rs  dwindle.rs  machi.rs  mod.rs  zoom.rs
src/lexer/: lexer.rs  mod.rs
src/wayland/: mod.rs  river_layout_unstable_v1.rs  river_layout_v1.rs  river_layout_v2.rs  river_options_unstable_v1.rs  river_options_v2.rs  river_status_unstable_v1.rs
