[package]
name = "rivertiler"
version = "0.1.0"
authors = ["bryan <snakedye@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-scanner = "0.28.5"
wayland-commons = "0.28.5"
wayland-client = "0.28.5"
